--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "archiver": "^7.0.1",
+    "axios": "^1.7.9",
     "passkit-generator": "^3.2.0"
   },
   "name": "passkit-demo",
